--- a/index.html
+++ b/index.html
@@ -67,6 +67,15 @@
 		</li>
 	</script>
 	
+	<script type="text/x-mustache" id="tmplContentEntry">
+		<li class="directory content closed node">
+			<div class="extra"></div>
+			<a href="#" class="dirLink medLink">{{.}}</a>
+			<ul class="children">
+			</ul>
+		</li>
+	</script>
+	
 	<script type="text/x-mustache" id="tmplDirEntry">
 		<li class="directory closed node">
 			<a href="#" class="dirLink medLink">{{name}}</a>
