pruning excess metadata

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 	</script>
 	
 	<script type="text/x-mustache" id="tmplVideoEntry">
-		<li class="video" data-path="{{meta.filename}}" data-md5="{{meta.md5}}">
+		<li class="video" data-path="{{meta.filename}}" data-md5="{{md5}}">
 			<a href="#!{{name}}" name="!{{name}}" class="fileLink medLink">{{ctxt.episode_title}} (S{{ctxt.season_number}}E{{ctxt.episode_number}})</a><br/>
 			<table class="details">
 				<tr>
