replaced icons/tweaked templates

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
 	</script>
 	
 	<script type="text/x-mustache" id="tmplContentEntry">
-		<li class="directory content closed node">
-			<div class="extra"></div>
+		<li class="directory content closed node media-{{.}}">
+			<!-- <div class="extra"></div> -->
 			<a href="#" class="dirLink medLink">{{.}}</a>
 			<ul class="children">
 			</ul>
