api dispatching work

--- a/index-2.html
+++ b/index-2.html
@@ -95,6 +95,7 @@
 	<script type="text/x-mustache-template" id="tmpl-TV-EPISODE">
 		<ul class="selectColumn">
 			    <li class="heading"><a href="#" class="goBack"></a> <a href="#" class="fileLink" data-md5="{{orig.md5}}">{{orig.imdb.name}}</a></li>
+					<li class="clearfix"></li>
 			    <li class="pane">
 					  <div class="details">
 							<div class="thumbs">
