api dispatching work

--- a/index-2.html
+++ b/index-2.html
@@ -48,7 +48,7 @@
 
   </footer>
 
-	<script type="text/x-mustache-template" id="tmpl-ROOT">
+	<script language="Mustache" type="text/x-mustache-template" id="tmpl-ROOT">
 		<ul class="selectColumn" data-tier="{{tier}}">
 			<li class="heading">
 				{{title}}
@@ -59,7 +59,7 @@
 		</ul>
 	</script>
 	
-	<script type="text/x-mustache-template" id="tmpl-TV-BASE">
+	<script language="Mustache" type="text/x-mustache-template" id="tmpl-TV-BASE">
 		<ul class="selectColumn">
 			<li class="heading">
 				<a href="#" class="goBack"> Shows</a>
@@ -70,7 +70,7 @@
 		</ul>
 	</script>
 	
-	<script type="text/x-mustache-template" id="tmpl-TV-SHOW">
+	<script language="Mustache" type="text/x-mustache-template" id="tmpl-TV-SHOW">
 		<ul class="selectColumn">
 			<li class="heading">
 				<a href="#" class="goBack"> {{title}}</a>
@@ -81,7 +81,7 @@
 		</ul>
 	</script>
 	
-	<script type="text/x-mustache-template" id="tmpl-TV-SEASON">
+	<script language="Mustache" type="text/x-mustache-template" id="tmpl-TV-SEASON">
 		<ul class="selectColumn">
 			<li class="heading">
 				<a href="#" class="goBack"> Season {{title}}</a>
