--- a/index-2.html
+++ b/index-2.html
@@ -112,6 +112,10 @@
 								</ul><!-- /.facts -->
 							</div>
 							
+							<div class="status">
+								      <strong>Downloaded:</strong> <span class="downloaded"></span>
+							</div>
+							
 							<div class="synopsis">
 								{{orig.imdb.synopsis}}
 							</div><!-- /.synopsis -->
@@ -128,6 +132,7 @@
 	<!-- scripts concatenated and minified via build script -->
   <script src="js/plugins.js"></script>
 	<script src="js/mustache.js" type="text/javascript" charset="utf-8"></script>
+	<script src="js/medac-api.js" type="text/javascript"></script>
 	<script src="js/medac-2.js" type="text/javascript"></script>
 	
 	
